Dasar dari Application Shell sebenarnya sudah berhasil dibuat walaupun belum sempurna karena tombol drawer masih belum dapat berfungsi, dan komponen UI belum dapat diakses dalam keadaan offline. Tapi tak apa, kita akan melakukannya secara perlahan.

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "movie-catalogs",
   "version": "1.0.0",
-  "description": "",
+  "description": "Free movie catalogue for you",
   "main": "index.js",
   "scripts": {
       "start-dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "IJlal Naufal Hibrizi",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.14.0",
